created answer dict to map multilingual answers to a standardised code sys

--- a/WE/exploring_and_cleaning_data.ipynb
+++ b/WE/exploring_and_cleaning_data.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,23 +406,358 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
     "# changing col orders\n",
     "gm_uk = gm_uk[col_orders]\n",
-    "gm_de = gm_uk[col_orders]\n",
-    "gm_fr = gm_uk[col_orders]\n",
-    "gm_intl = gm_uk[col_orders]"
+    "gm_de = gm_de[col_orders]\n",
+    "gm_fr = gm_fr[col_orders]\n",
+    "gm_intl = gm_intl[col_orders]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We gone done and created a function to "
+    "### Checking nan"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "q01                      0\n",
+       "q02                      0\n",
+       "q03                      0\n",
+       "q04                      0\n",
+       "q05                      0\n",
+       "q06                      0\n",
+       "q07                      0\n",
+       "q08                      0\n",
+       "q09                      0\n",
+       "q10                      0\n",
+       "q11                      0\n",
+       "q12                      0\n",
+       "q13                      0\n",
+       "q14                      0\n",
+       "q15                      1\n",
+       "q16                      0\n",
+       "q17                      0\n",
+       "q18                      0\n",
+       "q19                      0\n",
+       "q20                      0\n",
+       "q21                     19\n",
+       "q22                      0\n",
+       "q23                      0\n",
+       "q24                      0\n",
+       "q25                      0\n",
+       "q26                      0\n",
+       "q27                      0\n",
+       "q28                      0\n",
+       "q29                      0\n",
+       "country_of_residence    43\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gm_uk.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "q01                      0\n",
+       "q02                      0\n",
+       "q03                      0\n",
+       "q04                      0\n",
+       "q05                      0\n",
+       "q06                      0\n",
+       "q07                      0\n",
+       "q08                      0\n",
+       "q09                      0\n",
+       "q10                      0\n",
+       "q11                      0\n",
+       "q12                      0\n",
+       "q13                      0\n",
+       "q14                      0\n",
+       "q15                      0\n",
+       "q16                      0\n",
+       "q17                      0\n",
+       "q18                      0\n",
+       "q19                      0\n",
+       "q20                      0\n",
+       "q21                     19\n",
+       "q22                      0\n",
+       "q23                      0\n",
+       "q24                      0\n",
+       "q25                      0\n",
+       "q26                      0\n",
+       "q27                      0\n",
+       "q28                      0\n",
+       "q29                      0\n",
+       "country_of_residence     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gm_fr.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "q01                     0\n",
+       "q02                     0\n",
+       "q03                     0\n",
+       "q04                     0\n",
+       "q05                     0\n",
+       "q06                     0\n",
+       "q07                     0\n",
+       "q08                     0\n",
+       "q09                     0\n",
+       "q10                     0\n",
+       "q11                     0\n",
+       "q12                     0\n",
+       "q13                     0\n",
+       "q14                     0\n",
+       "q15                     0\n",
+       "q16                     0\n",
+       "q17                     0\n",
+       "q18                     0\n",
+       "q19                     0\n",
+       "q20                     0\n",
+       "q21                     1\n",
+       "q22                     0\n",
+       "q23                     0\n",
+       "q24                     0\n",
+       "q25                     0\n",
+       "q26                     0\n",
+       "q27                     0\n",
+       "q28                     0\n",
+       "q29                     0\n",
+       "country_of_residence    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gm_de.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Intl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "q01                     0\n",
+       "q02                     0\n",
+       "q03                     0\n",
+       "q04                     0\n",
+       "q05                     0\n",
+       "q06                     0\n",
+       "q07                     0\n",
+       "q08                     0\n",
+       "q09                     0\n",
+       "q10                     0\n",
+       "q11                     0\n",
+       "q12                     0\n",
+       "q13                     0\n",
+       "q14                     0\n",
+       "q15                     0\n",
+       "q16                     0\n",
+       "q17                     0\n",
+       "q18                     0\n",
+       "q19                     0\n",
+       "q20                     0\n",
+       "q21                     4\n",
+       "q22                     0\n",
+       "q23                     0\n",
+       "q24                     0\n",
+       "q25                     0\n",
+       "q26                     0\n",
+       "q27                     0\n",
+       "q28                     0\n",
+       "q29                     0\n",
+       "country_of_residence    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gm_intl.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are a few of NaNs to deal with, but nothing to violent, we'll leave them till we analyse the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extracting answers, creating corresponding dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# noting question numbers that need recoding\n",
+    "\n",
+    "# multiple choice\n",
+    "q_num_mc = [2,10,11,12,14,15,18,19,21,24]\n",
+    "q_num_mc = ['q{:02}'.format(num) for num in q_num_mc]\n",
+    "# single choice\n",
+    "q_num_sc = [1,3,16,17,20,22,23,25,27,28]\n",
+    "q_num_sc = ['q{:02}'.format(num) for num in q_num_sc]\n",
+    "# all\n",
+    "q_num_all = q_num_mc + q_num_sc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# restoring as a list of items\n",
+    "all_gm = [gm_uk, gm_de, gm_fr, gm_intl]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q02\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'split'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-123-24265b76dda5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mq_mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mq_num_mc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mfile\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mq_mc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mans\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m';'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mans\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mq_mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-123-24265b76dda5>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mq_mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mq_num_mc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mfile\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mq_mc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mans\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m';'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mans\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mq_mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'split'"
+     ]
+    }
+   ],
+   "source": [
+    "# converting all to lists\n",
+    "for file in all_gm:\n",
+    "    for q_mc in q_num_mc:\n",
+    "        print(q_mc)\n",
+    "        file[q_mc] = [ans.split(';') for ans in file[q_mc]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% hi's\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('100% hi\\'s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
