standardised country code

--- a/WE/exploring_and_cleaning_data_gm_stage_I.ipynb
+++ b/WE/exploring_and_cleaning_data_gm_stage_I.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,10 +49,10 @@
        "['Public Perception of Artificial Intelligence Technologies [UK].csv',\n",
        " '.DS_Store',\n",
        " 'Public Perception of Artificial Intelligence Technologies [Deutsche].csv',\n",
+       " 'cleaned',\n",
        " 'Pollfish_Survey_%C3%96ffentliche_Wahrnehmung_der_k%C3%BCnstlichen_Intelligenz_%5BDeutsche%5D_1979903.xlsx',\n",
        " 'Public Perception of Artificial Intelligence Technologies [intl_Ver].csv',\n",
        " \"Perception Publique des technologies de l'Intelligence Artificielle [FR].csv\",\n",
-       " 'gm_all.csv',\n",
        " 'Pollfish_Survey_Perception_Publique_des_technologies_de_l%27Intelligence_Artificielle_%5BFR%5D_1979900.xlsx']"
       ]
      },
@@ -89,8 +89,8 @@
     "# loading in all the google forms data\n",
     "gm_uk = pd.read_csv(os.path.join(data_dir, all_files[0]))\n",
     "gm_de = pd.read_csv(os.path.join(data_dir, all_files[2]))\n",
-    "gm_fr = pd.read_csv(os.path.join(data_dir, all_files[5]))\n",
-    "gm_intl = pd.read_csv(os.path.join(data_dir, all_files[4]))\n",
+    "gm_fr = pd.read_csv(os.path.join(data_dir, all_files[6]))\n",
+    "gm_intl = pd.read_csv(os.path.join(data_dir, all_files[5]))\n",
     "\n",
     "# storing as a list of items\n",
     "all_gm = [gm_uk, gm_de, gm_fr, gm_intl]"
@@ -820,9 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -879,9 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -938,9 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1101,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,10 +1104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2948,7 +2940,7 @@
        "[189 rows x 30 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2959,7 +2951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
